<resources>
    <string name="app_name">Composition</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_welcome">Состав числа</string>
    <string name="description_welcome">Правила игры: перед вами будет три фигуры, две снизу и одна сверху, в двух из них будут числа. Необходимо, чтобы сумма чисел из двух нижних фигур была равна числу в верхней фигуре, для этого нужно вставить недостающее число. Пример: в верхнем круге число 7, а в одном из нижних знак вопроса, а в другом число 4. Значит на месте вопросительного знака должно быть число 3, потому что 3 + 4 = 7.</string>
    <string name="brain_welcome_icon">brain_welcome_icon</string>
    <string name="ok_text_button">Выбрать уровень</string>
    <string name="choose_difficulty_level">Выберите уровень сложности:</string>
    <string name="button_text_level_test">Тестовый</string>
    <string name="button_text_level_easy">Легкий</string>
    <string name="button_text_level_normal">Средний</string>
    <string name="button_text_level_hard">Тяжелый</string>
    <string name="question_mark">\?</string>
    <string name="progress_answers">Правильных ответов %d (минимум %d)</string>
    <string name="default_text_tv_sum">1</string>
    <string name="start_value_tv_timer">00:00</string>
    <string name="default_text_tv_left_number">7</string>
    <string name="default_text_tv_option_1">1</string>
    <string name="default_text_tv_option_2">2</string>
    <string name="default_text_tv_option_3">3</string>
    <string name="default_text_tv_option_4">4</string>
    <string name="default_text_tv_option_5">5</string>
    <string name="default_text_tv_option_6">6</string>
    <string name="smile_result">SmileResult</string>
    <string name="tv_required_answers">Необходимое количество правильных ответов: %d</string>
    <string name="tv_score_answers">Ваш счет: %d</string>
    <string name="tv_required_percentage">Необходимый процент правильных ответов: %d</string>
    <string name="tv_score_percentage">Процент правильных ответов: %d</string>
    <string name="btn_text_retry">Попробовать снова</string>
</resources>