<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.GameFragment">

    <TextView
        android:id="@+id/tv_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_value_tv_timer"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_sum"
        style="@style/QuestionTextStyle"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:background="@drawable/circle_background"
        android:gravity="center"
        android:text="@string/default_text_tv_sum"
        app:layout_constraintBottom_toTopOf="@id/tv_left_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_left_number"
        style="@style/QuestionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/cardview_shadow_start_color"
        android:text="@string/default_text_tv_left_number"
        app:layout_constraintBottom_toTopOf="@+id/tv_option_1"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@+id/tv_sum"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sum" />

    <TextView
        android:id="@+id/tv_right"
        style="@style/QuestionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/cardview_shadow_start_color"
        android:text="@string/question_mark"
        app:layout_constraintBottom_toBottomOf="@+id/tv_left_number"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_sum"
        app:layout_constraintTop_toTopOf="@+id/tv_left_number" />

    <TextView
        android:id="@+id/tv_answer_progress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/progress_answers"
        app:layout_constraintBottom_toTopOf="@id/game_progress"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_left_number"
        app:layout_constraintVertical_chainStyle="spread" />

    <ProgressBar
        android:id="@+id/game_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/tv_option_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_answer_progress" />

    <TextView
        android:id="@+id/tv_option_1"
        style="@style/OptionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/default_text_tv_option_1"
        android:background="@color/cardview_shadow_start_color"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_option_4"
        app:layout_constraintEnd_toStartOf="@id/tv_option_5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_option_2"
        style="@style/OptionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/cardview_shadow_start_color"
        android:text="@string/default_text_tv_option_2"
        app:layout_constraintBottom_toTopOf="@id/tv_option_4"
        app:layout_constraintEnd_toStartOf="@id/tv_option_6"
        app:layout_constraintStart_toEndOf="@id/tv_option_4" />
    <TextView
        android:id="@+id/tv_option_3"
        style="@style/OptionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/default_text_tv_option_3"
        android:background="@color/cardview_shadow_start_color"
        app:layout_constraintBottom_toTopOf="@id/tv_option_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_option_5" />

    <TextView
        android:id="@+id/tv_option_4"
        style="@style/OptionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/cardview_shadow_start_color"
        android:text="@string/default_text_tv_option_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_option_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_option_1" />

    <TextView
        android:id="@+id/tv_option_5"
        style="@style/OptionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/cardview_shadow_start_color"
        android:text="@string/default_text_tv_option_5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_option_6"
        app:layout_constraintStart_toEndOf="@id/tv_option_4"
        app:layout_constraintTop_toBottomOf="@id/tv_option_2" />

    <TextView
        android:id="@+id/tv_option_6"
        style="@style/OptionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/cardview_shadow_start_color"
        android:text="@string/default_text_tv_option_6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_option_2"
        app:layout_constraintTop_toBottomOf="@id/tv_option_3" />
</androidx.constraintlayout.widget.ConstraintLayout>