<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/chooseLevelFragment"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ChooseLevelFragment">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/choose_difficulty_level"
            style="@style/TitleTextView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_level_test"
            android:text="@string/button_text_level_test"
            style="@style/ButtonChooseLevel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/button_level_easy"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/button_level_easy"
            style="@style/ButtonChooseLevel"
            android:text="@string/button_text_level_easy"
            android:backgroundTint="@color/green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_level_test" />

        <Button
            android:id="@+id/button_level_normal"
            style="@style/ButtonChooseLevel"
            android:text="@string/button_text_level_normal"
            android:backgroundTint="@color/yellow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_level_easy" />

        <Button
            android:id="@+id/button_level_hard"
            style="@style/ButtonChooseLevel"
            android:backgroundTint="@color/red"
            android:text="@string/button_text_level_hard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_level_normal" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
