<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/welcomeFragment"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".presentation.WelcomeFragment">

        <ImageView
            android:id="@+id/logo_welcome"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_margin="32dp"
            android:src="@mipmap/ic_brain_foreground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/brain_welcome_icon" />

        <TextView
            android:id="@+id/title_welcome"
            android:text="@string/title_welcome"
            style="@style/TitleTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_welcome" />

        <TextView
            android:id="@+id/content_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:text="@string/description_welcome"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_welcome" />

        <Button
            android:id="@+id/choose_button"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:text="@string/ok_text_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>